--- a/doxygen_docs/servo_8c.html
+++ b/doxygen_docs/servo_8c.html
@@ -88,6 +88,9 @@ $(function() {
   <div class="headertitle"><div class="title">servo.c File Reference</div></div>
 </div><!--header-->
 <div class="contents">
+
+<p>functions for servo  
+<a href="#details">More...</a></p>
 <div class="textblock"><code>#include &lt;unistd.h&gt;</code><br />
 <code>#include &lt;gpio.h&gt;</code><br />
 <code>#include &lt;timer.h&gt;</code><br />
@@ -144,8 +147,9 @@ Variables</h2></td></tr>
 <tr class="separator:a529b768ebd1fa28f8336aef8884966d3"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
-<div class="textblock"><dl class="section date"><dt>Date</dt><dd></dd></dl>
-<dl class="section author"><dt>Author</dt><dd></dd></dl>
+<div class="textblock"><p>functions for servo </p>
+<dl class="section date"><dt>Date</dt><dd>03/15/2024</dd></dl>
+<dl class="section author"><dt>Author</dt><dd>Yuhong Yao (yuhongy), Yiying Li (yiyingl4) </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a2958d91a80ce1c838141ad989510a2c8" name="a2958d91a80ce1c838141ad989510a2c8"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a2958d91a80ce1c838141ad989510a2c8">&#9670;&#160;</a></span>angle_to_tick()</h2>
