--- a/doxygen_docs/timer_8c.html
+++ b/doxygen_docs/timer_8c.html
@@ -87,6 +87,9 @@ $(function() {
   <div class="headertitle"><div class="title">timer.c File Reference</div></div>
 </div><!--header-->
 <div class="contents">
+
+<p>functions to set timer  
+<a href="#details">More...</a></p>
 <div class="textblock"><code>#include &lt;unistd.h&gt;</code><br />
 <code>#include &lt;timer.h&gt;</code><br />
 <code>#include &lt;rcc.h&gt;</code><br />
@@ -142,8 +145,9 @@ volatile uint8_t&#160;</td><td class="memItemRight" valign="bottom"><b>ledstate<
 <tr class="separator:a4b50edbbfe2ead836b91eb0122f8d95b"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
-<div class="textblock"><dl class="section date"><dt>Date</dt><dd></dd></dl>
-<dl class="section author"><dt>Author</dt><dd></dd></dl>
+<div class="textblock"><p>functions to set timer </p>
+<dl class="section date"><dt>Date</dt><dd>03/15/2024</dd></dl>
+<dl class="section author"><dt>Author</dt><dd>Yuhong Yao (yuhongy), Yiying Li (yiyingl4) </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="aa7d565a956f63bd52ff993e9c3e6b361" name="aa7d565a956f63bd52ff993e9c3e6b361"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#aa7d565a956f63bd52ff993e9c3e6b361">&#9670;&#160;</a></span>tim3_irq_handler()</h2>
